src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
@use "@assets/sass/_utils.functions.scss" as f;
@use "@sass/variables/_variables.colors.scss" as c;
@use "@assets/sass/mixins/_utils.mixins.scss" as mut;
@use "@assets/sass/variables/_variables.fonts.scss" as ft;
@use "@assets/sass/variables/_variables.sizes.scss" as s;

.topSlider {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    overflow: hidden;

    .swiper-wrapper{
        align-items: center;
    }

    .swiper-slide {
        text-align: center;
        width: fit-content;
        position:unset;
        font-size: 16px;
        font-weight: 500;
        line-height: 21px;
        letter-spacing: 0em;
        color: #C4C4C4;

        &-active {
            font-size: 24px;
            font-weight: 500;
            line-height: 32px;
            letter-spacing: 0em;
            color: #1D1F23;
        }
    }
}

.swiper{
    justify-content: center;
}

.slider-arrow {
    min-width: 44px;
    transition: .5s;
    filter: c.$active-arrow-filter-color;
    &:hover {
      filter: c.$selected-arrow-filter-color;
    }
}

.topSliderContainer {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
}

.squareParent{
    position: relative;
}
.teamMembersSlider {
    .swiper {
        padding: f.pxToRem(30px) 0;
        .swiper-slide{
            width: fit-content;
            height: auto;
        }
    }
}

